# ppd-editor

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yml  release.yml
resources/examples/: basic.ppd
src/: adapter.rs  common.rs  editor.rs  fixed_vec.rs  fs.rs  lib.rs  viewer.rs  viewport.rs
src/editor/: actions.rs  canvas.rs  config.rs  example.rs  menu.rs  shortcut.rs  storage.rs  ui.rs  widgets.rs
src/editor/canvas/: snap.rs
src/editor/widgets/: card.rs  dialog.rs  fragment_entry.rs  image_upload.rs  modal.rs  pivot_select.rs  slot_entry.rs  tooltip.rs
src/viewer/: actions.rs  config.rs  menu.rs  shortcut.rs  storage.rs  ui.rs
