[package]
name = "ppd-editor"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/editor.rs"
name = "ppd-editor"

[[bin]]
path = "src/bin/viewer.rs"
name = "ppd-viewer"

[dependencies]
anyhow = "1.0.71"
eframe = "0.22.0"
env_logger = "0.10.0"
font-kit = "0.11.0"
image = "0.24.6"
log = "0.4.19"
material-icons = { git = "https://github.com/fschutt/material-icons.git" }
paperdoll-tar = { path = "../paperdoll-tar" }
rfd = "0.11.4"
